--- a/frontend_Admin/package.json
+++ b/frontend_Admin/package.json
@@ -19,10 +19,12 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.5",
     "html-to-image": "^1.11.11",
+    "imagekit-javascript": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
