--- a/frontend_Admin/package.json
+++ b/frontend_Admin/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-json-to-excel": "^1.0.8",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-table": "^7.8.0",
