--- a/frontend_Admin/package.json
+++ b/frontend_Admin/package.json
@@ -35,16 +35,24 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "globals": "^16.0.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es6": true
+    }
   }
 }
